@@ -1,3 +1,4 @@
+Micro tab: Changed crystal sizes and limit amounts to give the user 2 crystals and 1.99 mol/L max concentration by formula ratio by default
 # 0.00.89 (55249) Aug 15, 2011
 Micro tab: Changed crystal sizes and limit amounts to default to 1.00 mol/L max concentration
 # 0.00.88 (55217) Aug 15, 2011
